# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

[package]
name = "tabox"
description = "A sandbox to execute a program in an isolated environment and measure its resource usage"
version = "0.1.0"
authors = ["Alessandro Righi <alerighi4@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
homepage = "https://github.com/alerighi/tabox"
repository = "https://alerighi.github.io/tabox"
documentation = "https://docs.rs/tabox"
default-run = "tabox"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
log = "0.4"
fs_extra = "1.1"
tempdir = "0.3"

# tmbox binary dependencies
structopt = "0.3"
env_logger = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
seccomp-sys = "0.1"
errno = "0.2"
