# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
# SPDX-License-Identifier: MPL-2.0

[package]
name = "tabox"
description = "A sandbox to execute a program in an isolated environment and measure its resource usage"
version = "0.1.12"
authors = ["Alessandro Righi <alerighi4@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/alerighi/tabox"
homepage = "https://alerighi.github.io/tabox"
documentation = "https://docs.rs/tabox"

[[bin]]
name = "tabox"
path = "src/bin/tabox.rs"
required-features = ["binary"]

[features]
binary = ["structopt", "env_logger"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
core_affinity = "0.5"
errno = "0.2"
libc = "0.2"
tempdir = "0.3"
nix = "0.16"
failure = "0.1"
signal-hook = "0.1"
lazy_static = "1.4"

# tabox binary dependencies
structopt = { version = "0.3", optional = true }
env_logger = { version = "0.7", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
seccomp-sys = "0.1"

